Criado os Link e desenvolvido o menu, bem como adicionado a localização
#33

Closes #8
Closes #9

--- a/css/estiloso.css
+++ b/css/estiloso.css
@@ -7,3 +7,32 @@
     background-color: #017338;
     color: whitesmoke;
 }
+
+.jumbotron{
+    margin-bottom: 0;
+}
+
+body {
+    position: relative; 
+}
+.affix {
+    top:0;
+    width: 100%;
+    z-index: 9999 !important;
+}
+.navbar {
+    margin-bottom: 0px;
+    border-radius: 0;
+}
+
+.affix ~ .container-fluid {
+    position: relative;
+    top: 50px;
+}
+#section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
+#section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
+#section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
+#section4 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
+#section5 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
+#section6 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
+#section7 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
