Validação de digitação e apresentação visual
http://webdesign.tutsplus.com/tutorials/building-a-bootstrap-contact-form-using-php-and-ajax--cms-23068
closes #31
closes #32

--- a/css/estiloso.css
+++ b/css/estiloso.css
@@ -45,6 +45,6 @@ h1,#Contato p{
     color: darkslategrey;
 }
 
-#contactForm .h4,#contactForm .h3{
+#contactForm .h4{
     color: darkslategrey;
 }
