--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1349,7 +1349,7 @@ a.text-primary:focus {
 }
 a.text-success:hover,
 a.text-success:focus {
-  color: #2b542c;
+  color: #0b4fe2;
 }
 .text-info {
   color: #31708f;
